# 2_bbws_auth_layer

./: .gitignore  pyproject.toml
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy-sit.yml  pr-checks.yml
scripts/: package_layer.sh
src/bbws_auth/: __init__.py  claims.py  data_access.py  decorators.py  exceptions.py  models.py  platform_permissions.py  resolver.py
terraform/: iam.tf  layer.tf  main.tf  outputs.tf  variables.tf
terraform/environments/: prod.tfvars  sit.tfvars
tests/unit/: conftest.py  test_claims.py  test_exceptions.py  test_models.py  test_platform_permissions.py  test_resolver.py  test_tenants_table_consolidation.py
